added cards with edited styling to latest.html

--- a/Index.html
+++ b/Index.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@300&family=Raleway:wght@300&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Spartan&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/00b18c67c0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 </head>
@@ -51,7 +49,7 @@
             </div>
         </div>
     </nav>
-   
+
     <div class="container-fluid jumbotron-container index-jumbotron-background">
         <div class="opaque-overlay">&nbsp;</div>
         <div class="row">
@@ -59,16 +57,15 @@
                 <section class="jumbotron">
                     <h1>Manchester Based Photographer</h1>
                     <hr>
-                        <p class="lead">
-                            Hello and welcome to my site. I am a manchester based photographer specializing in Urban,
-                            Studio and Event Photography.
-                            <br>
-                            <span class="text-muted">Scroll for more info on shoots.</span>
-                        </p>
-                        <a class="btn btn-lg blue-btn" href="#">Book a shoot!</a>
-                        <div class="scroll-icon-container text-center d-none d-md-block">
-                            <a class="scroll-icon" href="#scroll-point"><i class="fas fa-chevron-circle-down"></i></a>
-                        </div>
+                    <p class="lead">
+                        Hello and welcome to my site. I am a manchester based photographer specializing in Urban,
+                        Studio and Event Photography.
+                    </p>
+                    <a class="btn btn-lg blue-btn" href="#">Book a shoot!</a>
+                    <div class="scroll-icon-container text-center d-none d-md-block">
+                        <p>Scroll for more info on shoots.</p>
+                        <a class="scroll-icon" href="#scroll-point"><i class="fas fa-chevron-circle-down"></i></a>
+                    </div>
                 </section>
             </div>
         </div>
