--- a/latest.html
+++ b/latest.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@300&family=Raleway:wght@300&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Spartan&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/00b18c67c0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 </head>
@@ -60,7 +58,7 @@
                     <h1>Latest Work</h1>
                     <hr>
                     <div class="social-links text-center">
-                        <p class="socials-text"><strong>Like my work? Follow my socials!</strong></p>
+                        <h3>Like my work? Follow my socials!</h3>
                         <a href="https://en-gb.facebook.com/" target="_blank">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
@@ -84,40 +82,101 @@
         </div>
     </div>
 
+    <hr>
+
     <div class="row">
         <div class="col-sm-12 col-md-6">
-            <div class="card latest-card">
+            <div class="card latest-card latest-card-small">
                 <img src="assets/images/latest/latest-card-1.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                    <h3 class="card-title">Urban shoot with Eve</h3>
-                    <p class="card-text">18/02/2021
+                <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
+                    <div class="card-text-bg">
+                        <h3 class="card-title">Urban shoot with Eve</h3>
+                        <p class="card-text">18/02/2021</p>
                         <details>
                             <summary>Equipment Used</summary>
-                                   <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
-                                   <p>Nikon 24-70mm f2.8</p>
-                                   <p>Nikon 14-24mm f2.8</p>
-                            </details>
-                    </p>
+                            <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
+                            <p>Nikon 24-70mm f2.8</p>
+                            <p>Nikon 14-24mm f2.8</p>
+                        </details>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col-sm-12 col-md-6">
-            <div class="card latest-card">
-                <img src="..." class="card-img" alt="...">
-                <div class="card-img-overlay">
-                    <h3 class="card-title">Title</h3>
-                    <p class="card-text">Date
+            <div class="card latest-card latest-card-small">
+                <img src="assets/images/latest/latest-card-2.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
+                    <div class="card-text-bg">
+                        <h3 class="card-title">Yasmine's Birthday</h3>
+                        <p class="card-text">03/01/2021</p>
                         <details>
                             <summary>Equipment Used</summary>
-                                   <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
-                                   <p>Nikon 24-70mm f2.8</p>
-                                   <p>Nikon 14-24mm f2.8</p>
-                            </details>
-                    </p>
+                            <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
+                            <p>Nikon 24-70mm f2.8</p>
+                            <p>Nikon 14-24mm f2.8</p>
+                        </details>
+                    </div>
                 </div>
             </div>
         </div>
-     </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+             <div class="card latest-card latest-card-large">
+                <img src="assets/images/latest/latest-card-3.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
+                    <div class="card-text-bg">
+                        <h3 class="card-title">Live event band shoot</h3>
+                        <p class="card-text">17/11/2020</p>
+                        <details>
+                            <summary>Equipment Used</summary>
+                            <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
+                            <p>Nikon 24-70mm f2.8</p>
+                            <p>Nikon 14-24mm f2.8</p>
+                        </details>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12 col-md-6">
+            <div class="card latest-card latest-card-small">
+                <img src="assets/images/latest/latest-card-4.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
+                    <div class="card-text-bg">
+                        <h3 class="card-title">Barber Barber Manchester</h3>
+                        <p class="card-text">24/10/2020</p>
+                        <details>
+                            <summary>Equipment Used</summary>
+                            <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
+                            <p>Nikon 24-70mm f2.8</p>
+                            <p>Nikon 14-24mm f2.8</p>
+                        </details>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6">
+            <div class="card latest-card latest-card-small">
+                <img src="assets/images/latest/latest-card-5.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
+                    <div class="card-text-bg">
+                        <h3 class="card-title">Studio shoot with Jason</h3>
+                        <p class="card-text">16/10/2020</p>
+                        <details>
+                            <summary>Equipment Used</summary>
+                            <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
+                            <p>Nikon 24-70mm f2.8</p>
+                            <p>Nikon 14-24mm f2.8</p>
+                        </details>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <footer class="container-fluid">
