--- a/gallery.html
+++ b/gallery.html
@@ -26,13 +26,13 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="nav navbar-nav ml-auto text-center">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="latest.html">Latest</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="gallery.html" id="navbarDropdownMenuLink" role="button"
+                        <a class="nav-link dropdown-toggle active" aria-current="page" href="gallery.html" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Gallery
                         </a>
@@ -50,91 +50,20 @@
         </div>
     </nav>
 
-    <div class="container-fluid jumbotron-container index-jumbotron-background">
-        <div class="opaque-overlay">&nbsp;</div>
-        <div class="row">
-            <div class="col-12">
-                <section class="jumbotron">
-                    <h1>Manchester Based Photographer</h1>
-                    <hr>
-                    <p class="lead">
-                        Hello and welcome to my site. I am a manchester based photographer specializing in Urban,
-                        Studio and Event Photography.
-                    </p>
-                    <a class="btn btn-lg blue-btn" href="#">Book a shoot!</a>
-                    <div class="scroll-icon-container text-center d-none d-md-block">
-                        <p>Scroll for more info on shoots.</p>
-                        <a class="scroll-icon" href="#scroll-point"><i class="fas fa-chevron-circle-down"></i></a>
-                    </div>
-                </section>
-            </div>
-        </div>
-    </div>
+    <h1 id="urban-gallery">Gallery</h1>
+    
+    <hr>
 
-    <hr id="scroll-point">
+    <h2>Urban</h2>
 
-    <div class="row">
-        <div class="col-12">
-            <div class="card index-card mb-3">
-                <div class="row no-gutters">
-                    <div class="col-md-7 cardImg-container">
-                        <img src="assets/images/index/Urban-Card.jpg" alt="Street">
-                    </div>
-                    <div class="col-md-5">
-                        <div class="card-body">
-                            <h3 class="card-title">Urban Photography</h3>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio
-                                distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
-                                eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
-                            <a class="btn btn-lg blue-btn" href="#">View street gallery</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <hr>
 
-    <div class="row">
-        <div class="col-12">
-            <div class="card index-card mb-3">
-                <div class="row no-gutters">
-                    <div class="col-md-5 order-1 order-sm-1 order-md-0">
-                        <div class="card-body">
-                            <h3 class="card-title">Studio Photography</h3>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio
-                                distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
-                                eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
-                            <a class="btn btn-lg blue-btn" href="#">View studio gallery</a>
-                        </div>
-                    </div>
-                    <div class="col-md-7 order-0 order-sm-0 order-md-1 cardImg-container">
-                        <img src="assets/images/index/Studio-Card.jpg" alt="Studio">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <h2 id="Studio-gallery">Studio</h2>
 
-    <div class="row">
-        <div class="col-12">
-            <div class="card index-card mb-3">
-                <div class="row no-gutters">
-                    <div class="col-md-7 cardImg-container">
-                        <img src="assets/images/index/Event-Card.jpg" alt="Concert">
-                    </div>
-                    <div class="col-md-5">
-                        <div class="card-body">
-                            <h3 class="card-title">Event Photography</h3>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio
-                                distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
-                                eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
-                            <a class="btn btn-lg blue-btn" href="#">View event gallery</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <hr>
+
+    <h2 id="event-gallery">Events</h2>
+
 
     <footer class="container-fluid">
         <div id="footer-details" class="row">
