--- a/latest.html
+++ b/latest.html
@@ -32,14 +32,14 @@
                         <a class="nav-link active" aria-current="page" href="latest.html">Latest</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        <a class="nav-link dropdown-toggle" href="gallery.html" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Gallery
                         </a>
                         <ul class="dropdown-menu text-center" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Street</a></li>
-                            <li><a class="dropdown-item" href="#">Studio</a></li>
-                            <li><a class="dropdown-item" href="#">Events</a></li>
+                            <li><a class="dropdown-item" href="gallery.html#urban-gallery">Urban</a></li>
+                            <li><a class="dropdown-item" href="gallery.html#studio-gallery">Studio</a></li>
+                            <li><a class="dropdown-item" href="gallery.html#event-gallery">Events</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
