added urban gallery, fixed margins across website

--- a/Index.html
+++ b/Index.html
@@ -73,8 +73,9 @@
 
     <hr id="scroll-point">
 
+    <div class="card-container">
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 no-padding">
             <div class="card index-card mb-3">
                 <div class="row no-gutters">
                     <div class="col-md-7 cardImg-container">
@@ -93,9 +94,11 @@
             </div>
         </div>
     </div>
+</div>
 
+<div class="card-container">
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 no-padding">
             <div class="card index-card mb-3">
                 <div class="row no-gutters">
                     <div class="col-md-5 order-1 order-sm-1 order-md-0">
@@ -114,9 +117,11 @@
             </div>
         </div>
     </div>
+</div>
 
+<div class="card-container">
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 no-padding">
             <div class="card index-card mb-3">
                 <div class="row no-gutters">
                     <div class="col-md-7 cardImg-container">
@@ -135,6 +140,7 @@
             </div>
         </div>
     </div>
+</div>
 
     <footer class="container-fluid">
         <div id="footer-details" class="row">
