--- a/gallery.html
+++ b/gallery.html
@@ -50,15 +50,40 @@
         </div>
     </nav>
 
-    <h1 id="urban-gallery">Gallery</h1>
     
+    <div class="gallery-link" id="urban-gallery"></div>
+    <div class="gallery-container">
+        <h2>Urban</h2>
+        <hr>
+    <div class="row">
+
+        <div class="col-sm-12 col-md-4 no-padding">
+                <img src="assets/images/latest/latest-card-1.jpg" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4 no-padding">
+                <img src="assets/images/latest/latest-card-2.jpg" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4 no-padding">
+                <img src="assets/images/latest/latest-card-3.jpg" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-12 col-md-8 no-padding">
+                <img src="assets/images/latest/latest-card-4.jpg" alt="...">
+            </a>
+        </div>
+        <div class="col-sm-12 col-md-4 no-padding">
+                <img src="assets/images/latest/latest-card-5.jpg" alt="...">
+            </a>
+        </div> 
+    </div>
+</div>
+
+
     <hr>
 
-    <h2>Urban</h2>
-
-    <hr>
-
-    <h2 id="Studio-gallery">Studio</h2>
+    <h2 id="studio-gallery">Studio</h2>
 
     <hr>
 
