--- a/latest.html
+++ b/latest.html
@@ -84,8 +84,9 @@
 
     <hr>
 
+    <div class="card-container">
     <div class="row">
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-6 no-padding">
             <div class="card latest-card latest-card-small">
                 <img src="assets/images/latest/latest-card-1.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
@@ -102,7 +103,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-6 no-padding">
             <div class="card latest-card latest-card-small">
                 <img src="assets/images/latest/latest-card-2.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
@@ -120,9 +121,11 @@
             </div>
         </div>
     </div>
-
+</div>
+    
+    <div class="card-container">
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 no-padding">
              <div class="card latest-card latest-card-large">
                 <img src="assets/images/latest/latest-card-3.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
@@ -140,9 +143,11 @@
             </div>
         </div>
     </div>
+    </div>
 
+    <div class="card-container">
     <div class="row">
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-6 no-padding">
             <div class="card latest-card latest-card-small">
                 <img src="assets/images/latest/latest-card-4.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
@@ -159,7 +164,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-6 no-padding">
             <div class="card latest-card latest-card-small">
                 <img src="assets/images/latest/latest-card-5.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
@@ -177,6 +182,7 @@
             </div>
         </div>
     </div>
+</div>
 
 
     <footer class="container-fluid">
