All images added to gallery.html with media queries, Alt img text updated

--- a/Index.html
+++ b/Index.html
@@ -79,7 +79,7 @@
             <div class="card index-card mb-3">
                 <div class="row no-gutters">
                     <div class="col-md-7 cardImg-container">
-                        <img src="assets/images/index/Urban-Card.jpg" alt="Street">
+                        <img src="assets/images/index/Urban-Card.jpg" alt="Street at night">
                     </div>
                     <div class="col-md-5">
                         <div class="card-body">
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <div class="col-md-7 order-0 order-sm-0 order-md-1 cardImg-container">
-                        <img src="assets/images/index/Studio-Card.jpg" alt="Studio">
+                        <img src="assets/images/index/Studio-Card.jpg" alt="Studio with equipment">
                     </div>
                 </div>
             </div>
@@ -125,7 +125,7 @@
             <div class="card index-card mb-3">
                 <div class="row no-gutters">
                     <div class="col-md-7 cardImg-container">
-                        <img src="assets/images/index/Event-Card.jpg" alt="Concert">
+                        <img src="assets/images/index/Event-Card.jpg" alt="Hands raised at concert">
                     </div>
                     <div class="col-md-5">
                         <div class="card-body">
