--- a/gallery.html
+++ b/gallery.html
@@ -51,44 +51,92 @@
     </nav>
 
     
-    <div class="gallery-link" id="urban-gallery"></div>
+    <div id="urban-gallery"></div>
     <div class="gallery-container">
         <h2>Urban</h2>
         <hr>
     <div class="row">
 
         <div class="col-sm-12 col-md-4 no-padding">
-                <img src="assets/images/latest/latest-card-1.jpg" alt="...">
+                <img src="assets/images/Gallery/urban-1.jpg" alt="Man leaning on wall">
             </a>
         </div>
         <div class="col-sm-6 col-md-4 no-padding">
-                <img src="assets/images/latest/latest-card-2.jpg" alt="...">
+                <img src="assets/images/Gallery/urban-2.jpg" alt="Man checking phone">
             </a>
         </div>
         <div class="col-sm-6 col-md-4 no-padding">
-                <img src="assets/images/latest/latest-card-3.jpg" alt="...">
+                <img src="assets/images/Gallery/urban-3.jpg" alt="Woman with skateboard">
             </a>
         </div>
         <div class="col-sm-12 col-md-8 no-padding">
-                <img src="assets/images/latest/latest-card-4.jpg" alt="...">
+                <img src="assets/images/Gallery/urban-4.jpg" alt="Man and woman with skateboards">
             </a>
         </div>
         <div class="col-sm-12 col-md-4 no-padding">
-                <img src="assets/images/latest/latest-card-5.jpg" alt="...">
+                <img src="assets/images/Gallery/urban-5.jpg" alt="Skateboards and sneakers">
             </a>
         </div> 
     </div>
 </div>
 
+<div id="studio-gallery"></div>
+    <div class="gallery-container">
+        <h2>Studio</h2>
+        <hr>
+    <div class="row">
 
-    <hr>
+        <div class="col-sm-12 col-md-4 no-padding">
+                <img src="assets/images/Gallery/studio-1.jpg" alt="Man in studio-3">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4 no-padding">
+                <img src="assets/images/Gallery/studio-2.jpg" alt="Woman posing with hands">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4 no-padding">
+                <img src="assets/images/Gallery/studio-3.jpg" alt="Man with hand on chin">
+            </a>
+        </div>
+        <div class="col-sm-12 col-md-8 no-padding">
+                <img src="assets/images/Gallery/studio-4.jpg" alt="Boy with plant pot">
+            </a>
+        </div>
+        <div class="col-sm-12 col-md-4 no-padding">
+                <img src="assets/images/Gallery/studio-5.jpg" alt="Woman Shouting">
+            </a>
+        </div> 
+    </div>
+</div>
 
-    <h2 id="studio-gallery">Studio</h2>
+<div id="event-gallery"></div>
+    <div class="gallery-container">
+        <h2>Event</h2>
+        <hr>
+    <div class="row">
 
-    <hr>
-
-    <h2 id="event-gallery">Events</h2>
-
+        <div class="col-sm-12 col-md-4 no-padding">
+                <img src="assets/images/Gallery/event-1.jpg" alt="Birthday with sparklers">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4 no-padding">
+                <img src="assets/images/Gallery/event-2.jpg" alt="Woman singing">
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4 no-padding">
+                <img src="assets/images/Gallery/event-3.jpg" alt="Live band on stage">
+            </a>
+        </div>
+        <div class="col-sm-12 col-md-8 no-padding">
+                <img src="assets/images/Gallery/event-4.jpg" alt="silhouette of man with lighting equipment">
+            </a>
+        </div>
+        <div class="col-sm-12 col-md-4 no-padding">
+                <img src="assets/images/Gallery/event-5.jpg" alt="Man singing whilst people taking pictures with phones">
+            </a>
+        </div> 
+    </div>
+</div>
 
     <footer class="container-fluid">
         <div id="footer-details" class="row">
