--- a/latest.html
+++ b/latest.html
@@ -88,7 +88,7 @@
     <div class="row">
         <div class="col-sm-12 col-md-6 no-padding">
             <div class="card latest-card latest-card-small">
-                <img src="assets/images/latest/latest-card-1.jpg" class="card-img" alt="...">
+                <img src="assets/images/latest/latest-card-1.jpg" class="card-img" alt="Woman with leg raised">
                 <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
                     <div class="card-text-bg">
                         <h3 class="card-title">Urban shoot with Eve</h3>
@@ -105,7 +105,7 @@
         </div>
         <div class="col-sm-12 col-md-6 no-padding">
             <div class="card latest-card latest-card-small">
-                <img src="assets/images/latest/latest-card-2.jpg" class="card-img" alt="...">
+                <img src="assets/images/latest/latest-card-2.jpg" class="card-img" alt="Woman stood with birthday balloons">
                 <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
                     <div class="card-text-bg">
                         <h3 class="card-title">Yasmine's Birthday</h3>
@@ -127,7 +127,7 @@
     <div class="row">
         <div class="col-12 no-padding">
              <div class="card latest-card latest-card-large">
-                <img src="assets/images/latest/latest-card-3.jpg" class="card-img" alt="...">
+                <img src="assets/images/latest/latest-card-3.jpg" class="card-img" alt="Band plating live music">
                 <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
                     <div class="card-text-bg">
                         <h3 class="card-title">Live event band shoot</h3>
@@ -149,7 +149,7 @@
     <div class="row">
         <div class="col-sm-12 col-md-6 no-padding">
             <div class="card latest-card latest-card-small">
-                <img src="assets/images/latest/latest-card-4.jpg" class="card-img" alt="...">
+                <img src="assets/images/latest/latest-card-4.jpg" class="card-img" alt="Barber shop">
                 <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
                     <div class="card-text-bg">
                         <h3 class="card-title">Barber Barber Manchester</h3>
@@ -166,7 +166,7 @@
         </div>
         <div class="col-sm-12 col-md-6 no-padding">
             <div class="card latest-card latest-card-small">
-                <img src="assets/images/latest/latest-card-5.jpg" class="card-img" alt="...">
+                <img src="assets/images/latest/latest-card-5.jpg" class="card-img" alt="Man walking in studio">
                 <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
                     <div class="card-text-bg">
                         <h3 class="card-title">Studio shoot with Jason</h3>
