background gradient added, card & hr colors changed, contact.html added

--- a/Index.html
+++ b/Index.html
@@ -43,7 +43,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About & Enquire</a>
+                        <a class="nav-link" href="contact.html">About & Enquire</a>
                     </li>
                 </ul>
             </div>
@@ -61,7 +61,7 @@
                         Hello and welcome to my site. I am a manchester based photographer specializing in Urban,
                         Studio and Event Photography.
                     </p>
-                    <a class="btn btn-lg blue-btn" href="#">Book a shoot!</a>
+                    <a class="btn btn-lg blue-btn" href="contact.html">Book a shoot!</a>
                     <div class="scroll-icon-container text-center d-none d-md-block">
                         <p>Scroll for more info on shoots.</p>
                         <a class="scroll-icon" href="#scroll-point"><i class="fas fa-chevron-circle-down"></i></a>
@@ -87,7 +87,7 @@
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio
                                 distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
                                 eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
-                            <a class="btn btn-lg blue-btn" href="#">View street gallery</a>
+                            <a class="btn btn-lg blue-btn" href="gallery.html#urban-gallery">View urban gallery</a>
                         </div>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio
                                 distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
                                 eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
-                            <a class="btn btn-lg blue-btn" href="#">View studio gallery</a>
+                            <a class="btn btn-lg blue-btn" href="gallery.html#studio-gallery">View studio gallery</a>
                         </div>
                     </div>
                     <div class="col-md-7 order-0 order-sm-0 order-md-1 cardImg-container">
@@ -133,7 +133,7 @@
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio
                                 distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
                                 eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
-                            <a class="btn btn-lg blue-btn" href="#">View event gallery</a>
+                            <a class="btn btn-lg blue-btn" href="gallery.html#event-gallery">View event gallery</a>
                         </div>
                     </div>
                 </div>
