--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="latest.html">Latest</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" aria-current="page" href="gallery.html" id="navbarDropdownMenuLink" role="button"
+                        <a class="nav-link dropdown-toggle" href="gallery.html" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Gallery
                         </a>
@@ -43,99 +43,18 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">About & Enquire</a>
+                        <a class="nav-link active" aria-current="page" href="contact.html">About & Enquire</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div id="urban-gallery"></div>
-    <div class="gallery-container">
-        <h2>Urban</h2>
-        <hr>
-    <div class="row">
 
-        <div class="col-sm-12 col-md-4 no-padding">
-                <img src="assets/images/Gallery/urban-1.jpg" alt="Man leaning on wall">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4 no-padding">
-                <img src="assets/images/Gallery/urban-2.jpg" alt="Man checking phone">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4 no-padding">
-                <img src="assets/images/Gallery/urban-3.jpg" alt="Woman with skateboard">
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-8 no-padding">
-                <img src="assets/images/Gallery/urban-4.jpg" alt="Man and woman with skateboards">
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-4 no-padding">
-                <img src="assets/images/Gallery/urban-5.jpg" alt="Skateboards and sneakers">
-            </a>
-        </div> 
-    </div>
-</div>
 
-<div id="studio-gallery"></div>
-    <div class="gallery-container">
-        <h2>Studio</h2>
-        <hr>
-    <div class="row">
 
-        <div class="col-sm-12 col-md-4 no-padding">
-                <img src="assets/images/Gallery/studio-1.jpg" alt="Man in studio-3">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4 no-padding">
-                <img src="assets/images/Gallery/studio-2.jpg" alt="Woman posing with hands">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4 no-padding">
-                <img src="assets/images/Gallery/studio-3.jpg" alt="Man with hand on chin">
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-8 no-padding">
-                <img src="assets/images/Gallery/studio-4.jpg" alt="Boy with plant pot">
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-4 no-padding">
-                <img src="assets/images/Gallery/studio-5.jpg" alt="Woman Shouting">
-            </a>
-        </div> 
-    </div>
-</div>
 
-<div id="event-gallery"></div>
-    <div class="gallery-container">
-        <h2>Event</h2>
-        <hr>
-    <div class="row">
 
-        <div class="col-sm-12 col-md-4 no-padding">
-                <img src="assets/images/Gallery/event-1.jpg" alt="Birthday with sparklers">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4 no-padding">
-                <img src="assets/images/Gallery/event-2.jpg" alt="Woman singing">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4 no-padding">
-                <img src="assets/images/Gallery/event-3.jpg" alt="Live band on stage">
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-8 no-padding">
-                <img src="assets/images/Gallery/event-4.jpg" alt="silhouette of man with lighting equipment">
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-4 no-padding">
-                <img src="assets/images/Gallery/event-5.jpg" alt="Man singing whilst people taking pictures with phones">
-            </a>
-        </div> 
-    </div>
-</div>
 
     <footer class="container-fluid">
         <div id="footer-details" class="row">
