--- a/latest.html
+++ b/latest.html
@@ -43,7 +43,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About & Enquire</a>
+                        <a class="nav-link" href="contact.html">About & Enquire</a>
                     </li>
                 </ul>
             </div>
@@ -183,7 +183,6 @@
         </div>
     </div>
 </div>
-
 
     <footer class="container-fluid">
         <div id="footer-details" class="row">
