--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
                         <a class="nav-link" href="latest.html">Latest</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="gallery.html" id="navbarDropdownMenuLink" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="gallery.html" id="navbarDropdownMenuLink"
+                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Gallery
                         </a>
                         <ul class="dropdown-menu text-center" aria-labelledby="navbarDropdownMenuLink">
@@ -50,8 +50,57 @@
         </div>
     </nav>
 
+    <div class="about-container">
+        <h1>About</h1>
+        <hr>
+        <div class="row">
+            <div class="col-9">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores magnam laborum, quia assumenda
+                    quo expedita ex perferendis modi quis sint labore ut voluptates facere eligendi animi voluptatum
+                    doloremque enim amet.
+                </p>
+            </div>
+            <div class="col-3">
+                <img src="assets/images/Gallery/urban-1.jpg" alt="Photographer">
+            </div>
+        </div>
+    </div>
 
+    <hr>
 
+    <div class="enquire-container">
+        <h1>Enquire</h1>
+        <hr>
+
+        <form method="post" action="https://formdump.codeinstitute.net/">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required />
+
+            <label for="email">Email</label>
+            <input id="email" type="email" name="email" required />
+
+            <label for="tel">Phone</label>
+            <input id="tel" type="tel" name="tel" required />
+
+            <label for="shoot">Shoot</label>
+            <select id="shoot" name="shoot">
+                <option value="urban">Urban</option>
+                <option value="studio">Studio</option>
+                <option value="Event">Event</option>
+                <option value="multiple">Multiple</option>
+                <option value="not-sure">Not Sure</option>
+            </select>
+        </form>
+
+        <label for="message">Message</label>
+        <br>
+        <textarea id="message" name="message" value="message" cols="50" rows="10" placeholder="........."></textarea>
+        <br>
+        <input type="submit">
+        </form>
+
+    </div>
 
 
 
