color changes in style.css and readme file updated

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Photographer</a>
+            <a class="navbar-brand" href="index.html">Photographer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -54,14 +54,14 @@
         <h1>About</h1>
         <hr>
         <div class="row">
-            <div class="col-9">
+            <div class="col-md-9 col-sm-12">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores magnam laborum, quia assumenda
                     quo expedita ex perferendis modi quis sint labore ut voluptates facere eligendi animi voluptatum
                     doloremque enim amet.
                 </p>
             </div>
-            <div class="col-3">
+            <div class="col-3 d-none d-md-block">
                 <img src="assets/images/Gallery/urban-1.jpg" alt="Photographer">
             </div>
         </div>
@@ -77,7 +77,7 @@
 
             <div class="form-row">
                 <div class="col-9">
-                    <label for="name">Name</label>
+                    <label for="name"><i class="fas fa-user"></i> Name</label>
                     <input class="form-control" type="text" id="name" name="name" required />
                     <div class="valid-feedback">
                         Awesome Name!
@@ -87,7 +87,7 @@
 
             <div class="form-row">
                 <div class="col-9">
-                    <label for="email">Email</label>
+                    <label for="email"><i class="fas fa-envelope"></i> Email</label>
                     <input class="form-control" id="email" type="email" name="email" required />
                     <div class="valid-feedback">
                         Great!
@@ -97,17 +97,17 @@
 
             <div class="form-row">
                 <div class="col-9">
-                    <label for="tel">Phone</label>
+                    <label for="tel"><i class="fas fa-phone"></i> Phone</label>
                     <input class="form-control" id="tel" type="tel" name="tel" required />
                     <div class="valid-feedback">
-                        Dont worry i wont share
+                        Looks Good!
                     </div>
                 </div>
             </div>
 
             <div class="form-row">
                 <div class="col-6">
-                    <label for="shoot">Shoot</label>
+                    <label for="shoot"><i class="fas fa-camera"></i> Photoshoot</label>
                     <select class="form-control" id="shoot" name="shoot">
                         <option value="urban">Urban</option>
                         <option value="studio">Studio</option>
@@ -120,7 +120,7 @@
 
             <div class="form-row">
                 <div class="col-12">
-                    <label for="message">Message</label>
+                    <label for="message"><i class="fas fa-comment-dots"></i> Message</label>
                     <br>
                     <textarea class="form-control" id="message" name="message" value="message" cols="50" rows="10"
                         placeholder="Please provide any questions or details related to the shoot. eg: The event, Locations, Additional props/equipment." required></textarea>
