--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Photographer</a>
+            <a class="navbar-brand" href="index.html">Photographer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -60,6 +60,7 @@
                     <p class="lead">
                         Hello and welcome to my site. I am a manchester based photographer specializing in Urban,
                         Studio and Event Photography.
+                        
                     </p>
                     <a class="btn btn-lg blue-btn" href="contact.html">Book a shoot!</a>
                     <div class="scroll-icon-container text-center d-none d-md-block">
